2015-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Moved syd(8) from 'sbin' to 'noinst' in 'tests/Makefile.am'.
	* Fixed a bug in 'sy/syrtp_server.cpp' that caused RTP subscriptions
	to not be made if no source slots were configured.
	* Added sycapture(8) in 'tests/sycapture.cpp' and 'test/sycapture.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored SyAdvServer' to transmit advertising updates correctly
	in 'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Added syplay(8) in 'tests/syplay.cpp' and 'test/syplay.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out 'SyClock' in 'sy/syclock.cpp' and 'sy/syclock.h'.
2015-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented PLL algorithm in 'sy/syclock.cpp' and 'sy/syclock.h'.
2015-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Added sytone(8) in 'tests/sytone.cpp' and 'test/sytone.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyClock::sourceAddress()' method in 'sy/syclock.cpp' and
	'sy/syclock.h'.
	* Added a 'SyClock::sourceAddressChanged()' signal in 'sy/syclock.cpp'
	and 'sy/syclock.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified PLL algorithm to use derivative setpoint in 'sy/syclock.cpp'
	and 'sy/syclock.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syclock.cpp' that caused the PLL to run away
	when processing a negative offset.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syclock.cpp' that caused the PLL to spontaneously
	reset.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyClock::pllHasReset()' signal in 'sy/syclock.cpp' and
	'sy/syclock.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified PLL comparitor to use absolute time intervals.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Added code to set SCHED_FIFO scheduling priority in
	'tests/sytone.cpp'.